--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 ###### TE3D
 #### A software-based 3D terminal engine.
 
-
+IMPORTANT!
+This project isn't under active development anymore.
+See "CE3D" for the new C++ project.
 
 ### What you can do and what you can't do
 
